--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/postgres"
+GRAPHQL_ENDPOINT=http://localhost:8080/v1/graphql
+GRAPHQL_ADMIN_SECRET=myadminsecretkey
 SESSION_SECRET="super-duper-s3cret"
