--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "build:css": "npm run generate:css -- --minify",
     "build:remix": "remix build",
     "build:server": "esbuild --platform=node --format=cjs ./server.ts --outdir=build",
+    "predev": "npm run generate:gql",
     "dev": "run-p dev:*",
     "dev:server": "cross-env NODE_ENV=development node --inspect --require ./node_modules/dotenv/config --require ./mocks ./build/server.js",
     "dev:build": "cross-env NODE_ENV=development npm run build:server -- --watch",
     "dev:remix": "cross-env NODE_ENV=development remix watch",
     "dev:css": "cross-env NODE_ENV=development npm run generate:css -- --watch",
-    "docker": "docker-compose up -d",
+    "docker": "docker-compose up -d && open -n -a \"Google Chrome\" --args \"--new-window\" \"http://localhost:8080\"",
     "format": "prettier --write .",
     "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
+    "generate:gql": "GRAPHQL_ADMIN_SECRET=$(grep GRAPHQL_ADMIN_SECRET .env | cut -d '=' -f2) graphql-codegen",
     "postinstall": "remix setup node",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-    "setup": "prisma migrate dev && prisma db seed",
+    "setup": "cd ./hasura && hasura metadata apply --endpoint http://localhost:8080 && hasura migrate apply --all-databases --endpoint http://localhost:8080 && hasura metadata reload --endpoint http://localhost:8080",
     "start": "cross-env NODE_ENV=production node ./build/server.js",
     "start:mocks": "cross-env NODE_ENV=production node --require ./mocks --require dotenv/config ./build/server.js",
     "test": "vitest",
@@ -36,21 +38,24 @@
     "/public/build"
   ],
   "dependencies": {
-    "@prisma/client": "^3.11.0",
     "@remix-run/express": "*",
     "@remix-run/react": "*",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.17.3",
+    "graphql-request": "^4.2.0",
     "morgan": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "*",
+    "remix": "^1.3.3",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^6.0.0",
+    "@graphql-codegen/cli": "^2.6.2",
+    "@graphql-codegen/typescript": "^2.4.8",
+    "@graphql-codegen/typescript-operations": "^2.3.5",
     "@remix-run/dev": "*",
     "@remix-run/eslint-config": "*",
     "@testing-library/cypress": "^8.0.2",
@@ -87,8 +92,5 @@
   },
   "engines": {
     "node": ">=14"
-  },
-  "prisma": {
-    "seed": "ts-node --require tsconfig-paths/register prisma/seed.ts"
   }
 }
