--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "",
   "sideEffects": false,
   "scripts": {
+    "prebuild": "npm run generate:gql",
     "build": "run-s build:*",
     "build:css": "npm run generate:css -- --minify",
     "build:remix": "remix build",
@@ -15,13 +16,14 @@
     "dev:build": "cross-env NODE_ENV=development npm run build:server -- --watch",
     "dev:remix": "cross-env NODE_ENV=development remix watch",
     "dev:css": "cross-env NODE_ENV=development npm run generate:css -- --watch",
-    "docker": "docker-compose up -d && open -n -a \"Google Chrome\" --args \"--new-window\" \"http://localhost:8080\"",
+    "docker": "docker-compose up -d",
     "format": "prettier --write .",
     "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
     "generate:gql": "GRAPHQL_ADMIN_SECRET=$(grep GRAPHQL_ADMIN_SECRET .env | cut -d '=' -f2) graphql-codegen",
     "postinstall": "remix setup node",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-    "setup": "cd ./hasura && hasura metadata apply --endpoint http://localhost:8080 --admin-secret myadminsecretkey && hasura migrate apply --all-databases --endpoint http://localhost:8080 --admin-secret myadminsecretkey && hasura metadata reload --endpoint http://localhost:8080 --admin-secret myadminsecretkey",
+    "setup": "cd ./hasura && hasura metadata apply --endpoint http://localhost:8080 --admin-secret myadminsecretkey && hasura migrate apply --all-databases --endpoint http://localhost:8080 --admin-secret myadminsecretkey && hasura metadata reload --endpoint http://localhost:8080 --admin-secret myadminsecretkey && hasura seed apply --admin-secret myadminsecretkey && npm run open:hasura",
+    "open:hasura": "open -n -a \"Google Chrome\" --args \"--new-window\" \"http://localhost:8080\"",
     "start": "cross-env NODE_ENV=production node ./build/server.js",
     "start:mocks": "cross-env NODE_ENV=production node --require ./mocks --require dotenv/config ./build/server.js",
     "test": "vitest",
