--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "morgan": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "remix": "^1.3.3",
+    "remix": "*",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
